--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
   text-align: center;
 }
 
+
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -36,3 +38,12 @@
     transform: rotate(360deg);
   }
 }
+.ui.main.container{
+  margin-top: 1em;
+  width: 100%;
+  height: 130vh;
+  border-radius: 10px;
+  background-image: url("images/HRMS.jpg");
+  
+}
+
