--- a/src/App.css
+++ b/src/App.css
@@ -42,9 +42,12 @@
   margin-top: 1em;
   width: 100%;
   height: 180vh;
-  border-radius: 10px;
+ 
   
-  background-image: url("images/HRMS.jpg");
+  background-image: url("./images/1608583945-GettyImages-1217542903.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  
   
   
   
